--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "type": "module",
     "scripts": {
         "dev": "nodemon api/index.js",
         "start": "node api/index.js"
@@ -10,6 +11,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.19.2"
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "mongodb": "^6.7.0",
+        "mongoose": "^8.4.3"
     }
 }
